# grzegorz

./: .envrc  .gitignore  .gitmodules  LICENSE  README.md  default_config.ini  default_config.py  deploy.bash  deploy.sh  flake.nix  main.py  mpv_control.py  pyproject.toml  requirements.txt  server.py
grzegorz/: __init__.py  api.py  metadatafetch.py  mpv.py  nyasync.py  playlist_data.py  playlistmanage.py
res/: style.css
