[tool.poetry]
name = "grzegorz"
version = "0.2.0"
description = "A REST API for managing a MPV instance over via a RPC socket."
authors = ["Peder Bergebakken Sundt <pbsds@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
mpv = ">=0.1" # TODO: do we use this?
youtube_dl = "^2021.12.17"
sanic = ">=21.12.2"
sanic-openapi = ">=21.6.1"

[tool.poetry.dev-dependencies]
python-lsp-server = {extras = ["all"], version = "^1.3.3"}

[tool.poetry.scripts]
grzegorz-mpv-command = 'grzegorz.mpv:print_mpv_command'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
